# ChangeLog for x11-drivers/xf86-video-apm
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-apm/ChangeLog,v 1.16 2006/06/30 15:17:14 wolf31o2 Exp $

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  xf86-video-apm-1.0.1.5.ebuild:
  Stable on amd64.

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86-video-apm-1.0.1.5.ebuild:
  x86 stable.

  05 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  xf86-video-apm-1.1.1.ebuild:
  Add ~x86-fbsd keyword.

  16 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  xf86-video-apm-1.0.1.5.ebuild:
  Add ~x86-fbsd keyword.

*xf86-video-apm-1.1.1 (14 Apr 2006)

  14 Apr 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +xf86-video-apm-1.1.1.ebuild:
  Bump for 7.1 RC1.

  02 Feb 2006; Luis Medinas <metalgod@gentoo.org>
  xf86-video-apm-1.0.1.5.ebuild:
  Added ~amd64 keyword.

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -xf86-video-apm-1.0.1.3.ebuild, -xf86-video-apm-1.0.1.4.ebuild:
  Pull old versions.

*xf86-video-apm-1.0.1.5 (23 Dec 2005)

  23 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xf86-video-apm-1.0.1.5.ebuild:
  Bump for 7.0.

*xf86-video-apm-1.0.1.4 (18 Dec 2005)

  18 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xf86-video-apm-1.0.1.4.ebuild:
  Bump for 7.0RC4.

  09 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  files/digest-xf86-video-apm-1.0.1.3, Manifest:
  Update digest to match patch introduced by x-modular.eclass changes.

  09 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -xf86-video-apm-1.0.0.ebuild, -xf86-video-apm-1.0.1.1.ebuild,
  -xf86-video-apm-1.0.1.2.ebuild:
  Pull old versions.

*xf86-video-apm-1.0.1.3 (04 Dec 2005)

  04 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xf86-video-apm-1.0.1.3.ebuild:
  Bump for 7.0RC3.

*xf86-video-apm-1.0.1.2 (11 Nov 2005)

  11 Nov 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xf86-video-apm-1.0.1.2.ebuild: