@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-ark
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ark/ChangeLog,v 1.17 2006/06/30 15:17:44 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ark/ChangeLog,v 1.18 2006/07/01 00:39:00 spyderous Exp $
+
+  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86-video-ark-0.6.0.ebuild:
+  stable on sh
 
   30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   xf86-video-ark-0.5.0.5.ebuild:
